created bigger cards, deleted extra CSS file

--- a/style.css
+++ b/style.css
@@ -5,4 +5,8 @@
     width: 100%;
     /* The width is the width of the web page */
   }
-  
+
+.buttons-event-heart {
+    display: flex;
+    justify-content: space-between;
+}
