--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-/* Set the size of the div element that contains the map */
-
-
 .buttons-event-heart {
     display: flex;
     justify-content: space-between;
@@ -10,4 +7,8 @@
 }
 .buy-tickets:hover {
   color: white;
+}
+
+.heading-text {
+  font-family: 'Merriweather', serif;
 }
